# JustDrop

./: .gitignore  Cargo.toml  README.md  config.toml  deny.toml  install.sh  rustdrop-macos-daemon  uninstall.sh
.github/workflows/: lint.yml  release.yml  security.yml  test.yml
crates/justdrop-ble/: Cargo.toml
crates/justdrop-ble/src/: advertisement.rs  handshake.rs  hotspot.rs  lib.rs
crates/justdrop-core/: Cargo.toml
crates/justdrop-core/src/: config.rs  db.rs  error.rs  identity.rs  lib.rs  trust.rs  types.rs
crates/justdrop-core/src/migrations/: v001.sql
crates/justdrop-daemon/: Cargo.toml
crates/justdrop-daemon/src/: main.rs
crates/justdrop-discovery/: Cargo.toml
crates/justdrop-discovery/src/: browser.rs  lib.rs  registrar.rs
crates/justdrop-engine/: Cargo.toml
crates/justdrop-engine/src/: engine.rs  events.rs  lib.rs  peer.rs  session.rs
crates/justdrop-ffi/: Cargo.toml  build.rs
crates/justdrop-ffi/src/: android.rs  justdrop.udl  legacy_c_abi.rs  lib.rs  macos.rs
crates/justdrop-network/: Cargo.toml
crates/justdrop-network/src/: connector.rs  lib.rs  listener.rs  sendfile.rs  transport.rs
crates/justdrop-protocol/: Cargo.toml
crates/justdrop-protocol/src/: codec.rs  lib.rs  messages.rs  messages_v2.rs  state.rs  transfer.rs
crates/justdrop-security/: Cargo.toml
crates/justdrop-security/src/: crypto.rs  handshake.rs  keys.rs  lib.rs  session.rs
crates/justdrop-security/tests/: security_integration.rs
crates/justdrop-storage/: Cargo.toml
crates/justdrop-storage/src/: chunker.rs  compress.rs  hash.rs  integrity.rs  lib.rs  resume.rs  writer.rs
crates/justdrop-transport/: Cargo.toml
crates/justdrop-transport/src/: endpoint.rs  lib.rs  tls.rs
crates/justdrop-transport/tests/: loopback.rs  stress.rs
crates/rustdrop-core/: Cargo.toml
crates/rustdrop-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/rustdrop-daemon/: Cargo.toml
crates/rustdrop-daemon/src/: main.rs
crates/rustdrop-discovery/: Cargo.toml
crates/rustdrop-discovery/src/: browser.rs  lib.rs  registrar.rs
crates/rustdrop-ffi/: Cargo.toml
crates/rustdrop-ffi/src/: android.rs  lib.rs  macos.rs
crates/rustdrop-network/: Cargo.toml
crates/rustdrop-network/src/: connector.rs  lib.rs  listener.rs  sendfile.rs  transport.rs
crates/rustdrop-protocol/: Cargo.toml
crates/rustdrop-protocol/src/: codec.rs  lib.rs  messages.rs  state.rs  transfer.rs
crates/rustdrop-security/: Cargo.toml
crates/rustdrop-security/src/: handshake.rs  keys.rs  lib.rs  session.rs
crates/rustdrop-storage/: Cargo.toml
crates/rustdrop-storage/src/: chunker.rs  integrity.rs  lib.rs  resume.rs  writer.rs
platform/android/: .editorconfig  settings.gradle.kts
platform/android/app/: build.gradle.kts
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/kotlin/com/justdrop/app/: BootReceiver.kt  DevicePickerActivity.kt  JustBridge.kt  JustDropApp.kt  JustDropService.kt  JustDropTileService.kt  ShareActivity.kt  TransferActionReceiver.kt  TransferNotifications.kt
platform/android/app/src/main/kotlin/com/justdrop/app/ble/: BleAdvertiser.kt  BleGattClient.kt  BleGattServer.kt  BleScanner.kt
platform/android/app/src/main/kotlin/com/justdrop/app/hotspot/: HotspotManager.kt  WifiConnector.kt
platform/android/app/src/main/kotlin/com/justdrop/app/preview/: PreviewGenerator.kt
platform/android/app/src/main/kotlin/com/justdrop/app/service/: JustDropForegroundService.kt  TransferWorker.kt
platform/android/app/src/main/kotlin/com/justdrop/app/share/: ComposeShareActivity.kt
platform/android/app/src/main/kotlin/com/justdrop/app/tile/: QuickSettingsTile.kt
platform/android/app/src/main/kotlin/com/justdrop/app/ui/: MainActivity.kt
platform/android/app/src/main/kotlin/com/justdrop/app/ui/components/: DeviceCard.kt  TransferSheet.kt
platform/android/app/src/main/kotlin/com/justdrop/app/ui/screens/: DevicePickerSheet.kt  HomeScreen.kt  SettingsScreen.kt  TransferScreen.kt
platform/android/app/src/main/kotlin/com/justdrop/app/ui/theme/: Theme.kt
platform/android/app/src/main/kotlin/com/rustdrop/app/: BootReceiver.kt  DevicePickerActivity.kt  RustBridge.kt  RustDropApp.kt  RustDropService.kt  RustDropTileService.kt  ShareActivity.kt
platform/android/app/src/main/res/values/: strings.xml  themes.xml
platform/macos/: .swiftlint.yml  build.sh
platform/macos/JustDrop/: Info.plist  Package.swift
platform/macos/JustDrop/Sources/: AppDelegate.swift  JustBridge.swift  StatusBarController.swift  TransferNotificationManager.swift
platform/macos/JustDrop/Sources/Bluetooth/: BleCentral.swift  BleHandshake.swift  BlePeripheral.swift
platform/macos/JustDrop/Sources/Network/: WifiManager.swift
platform/macos/JustDrop/Sources/Preview/: ThumbnailGenerator.swift
platform/macos/JustDrop/Sources/SwiftUI/: AppDelegate.swift  DeviceListView.swift  EngineViewModel.swift  IncomingTransferView.swift  JustDropApp.swift  MenuBarView.swift  SettingsView.swift  TransferView.swift
platform/macos/JustDropFinder/: FinderSync.swift
platform/macos/JustDropShare/: Info.plist  ShareViewController.swift
platform/macos/LaunchDaemons/: com.justdrop.daemon.plist  com.rustdrop.daemon.plist
platform/macos/RustDrop/Sources/: AppDelegate.swift  RustBridge.swift  StatusBarController.swift
platform/macos/RustDropFinder/: FinderSync.swift
platform/macos/RustDropShare/: ShareViewController.swift
