[package]
name = "justdrop-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types, configuration, and error definitions for JustDrop"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
blake3 = { workspace = true }
rusqlite = { workspace = true }
ring = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
