[package]
name = "justdrop-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Central orchestrator for JustDrop — manages discovery, sessions, and transfers"

[dependencies]
justdrop-core = { path = "../justdrop-core" }
justdrop-ble = { path = "../justdrop-ble" }
justdrop-transport = { path = "../justdrop-transport" }
justdrop-protocol = { path = "../justdrop-protocol" }
justdrop-security = { path = "../justdrop-security" }
justdrop-storage = { path = "../justdrop-storage" }
justdrop-discovery = { path = "../justdrop-discovery" }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
tempfile = "3"
