[package]
name = "justdrop-security"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Noise protocol handshake and encrypted session management for JustDrop"

[dependencies]
justdrop-core = { path = "../justdrop-core" }
snow = "0.10"
rand = { workspace = true }
zeroize = { workspace = true }
blake2 = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
