[package]
name = "rustdrop-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Background daemon for RustDrop file transfer service"

[[bin]]
name = "rustdrop"
path = "src/main.rs"

[dependencies]
rustdrop-core = { path = "../rustdrop-core" }
rustdrop-protocol = { path = "../rustdrop-protocol" }
rustdrop-discovery = { path = "../rustdrop-discovery" }
rustdrop-security = { path = "../rustdrop-security" }
rustdrop-network = { path = "../rustdrop-network" }
rustdrop-storage = { path = "../rustdrop-storage" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
